<resources>
    <string name="analyzeButton">Analyze</string>
    <string name="app_name">Gomoku</string>
    <string name="button15">15x15</string>
    <string name="button19">19x19</string>
    <string name="buttonEnd">End</string>
    <string name="buttonNext">Next</string>
    <string name="buttonPrevious">Prev</string>
    <string name="buttonStandardTime">1min</string>
    <string name="buttonStart">Start</string>
    <string name="buttonTimeWithBonus">1min|5s</string>
    <string name="dbCleanButton">Clean Scores</string>
    <string name="drawButton">Draw</string>
    <string name="emailLabel">Email:</string>
    <string name="enterEmail">Enter email:</string>
    <string name="enterName">Enter name:</string>
    <string name="enterNames">Enter your names:</string>
    <string name="enterPassword">Enter password:</string>
    <string name="exitButton">Exit</string>
    <string name="highScores">High scores</string>
    <string name="homeTile">Gomoku</string>
    <string name="logInButton">Log In</string>
    <string name="passwordLabel">Password:</string>
    <string name="playAgainButton">Play Again</string>
    <string name="playButton">Play</string>
    <string name="playerOne">Player One</string>
    <string name="playerTwo">Player Two</string>
    <string name="reverseButton">Reverse</string>
    <string name="scoresButton">Scores</string>
    <string name="signInButton">Sign In</string>
    <string name="submitButton">Submit</string>
    <string name="topPlayers">Top Players</string>
    <string name="signOutButton">Sign Out</string>
</resources>